--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-cli": "^4.12.1",
+    "@react-navigation/native": "^6.0.6",
+    "expo": "^1.0.0",
+    "expo-cli": "^4.3.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "^0.17.5",
+    "react-redux": "^7.2.5",
     "redux": "^4.1.1"
   },
   "devDependencies": {
